cockroachlabs-preview-main/docs/v25.4/configure-logs.mdx
---
title: "Configure Logs"
old_description: "How to configure CockroachDB logs with the --log or --log-config-file flag and YAML payload."
---

This page describes how to configure CockroachDB logs with the [`--log` or `log-config-file` flag](/docs/v25.4/cockroach-start#logging) and a [YAML payload](#yaml-payload). Most logging behaviors are configurable, including:

- The [log sinks](#configure-log-sinks) that output logs to different locations, including over the network.
- The [logging channels](/docs/v25.4/logging-overview#logging-channels) that are mapped to each sink.
- The [format](/docs/v25.4/log-formats) used by the log messages.
- The [redaction](#redact-logs) of log messages.
- The [buffering](#log-buffering-for-network-sinks) of log messages.

For examples of how these settings can be used in practice, see [Logging Use Cases](/docs/v25.4/logging-use-cases).

<Note>
In a future major release, certain events will be directed by default to new [logging channels](/docs/v25.4/logging-overview#logging-channels).

To prepare for the change and assess potential downstream impacts on your logging setup and pipelines, review the [`log.channel_compatibility_mode.enabled`](/docs/v25.4/logging-overview#log-channel_compatibility_mode-enabled) cluster setting. After reviewing the documentation, set `log.channel_compatibility_mode.enabled` to `false` in a non-production environment.
</Note>

## Flag

To configure the logging behavior of a `cockroach` command, include one of these flags with the command:

- [`--log={yaml}`](/docs/v25.4/cockroach-start#logging), where `{yaml}` is the [YAML payload](#yaml-payload)
- [`--log-config-file={yaml-file}`](/docs/v25.4/cockroach-start#logging), where `{yaml-file}` is the path to a YAML file

To disable logging, set `--log-dir` to a blank directory (`--log-dir=`) instead of using one of the other logging flags. Do not use `--log-dir=""`; this creates a new directory named `""` and stores log files in that directory.

To apply changes to an existing node's logging configuration, restart the node with the updated `--log` flag or point it to the updated `--log-config-file`. CockroachDB reads these settings during startup. Before restarting, use [`cockroach debug check-log-config`](#cockroach-debug-check-log-config) to verify the effective configuration produced by your changes.

<Tip>
All [`cockroach` commands](/docs/v25.4/cockroach-commands) support logging and can be configured with `--log` or `--log-config-file`. However, note that most messages related to cluster operation are generated by [`cockroach start`](/docs/v25.4/cockroach-start) or [`cockroach start-single-node`](/docs/v25.4/cockroach-start-single-node). Other commands generate messages related to their own execution, which are mainly useful when troubleshooting the behaviors of those commands.
</Tip>

## YAML payload

All log settings for a `cockroach` command are specified with a YAML payload in one of the following formats:

- Block format, where each parameter is written on a separate line. For example, after creating a file `logs.yaml`, pass the YAML values with either `--log-config-file` or `--log`:

    ```shell
    $ cockroach start-single-node --certs-dir=certs --log-config-file=logs.yaml
    ```

    ```shell
    $ cockroach start-single-node --certs-dir=certs --log="$(cat logs.yaml)"
    ```
- Inline format, where all parameters are specified on one line. For example, to generate an `ops` log file that collects the `OPS` and `HEALTH` channels (overriding the file groups defined for those channels in the [default configuration](#default-logging-configuration)):

    ```shell
    $ cockroach start-single-node --certs-dir=certs --log="sinks: {file-groups: {ops: {channels: [OPS, HEALTH]}}}"
    ```

    Note that the inline spaces must be preserved.

For clarity, this article uses the block format to describe the YAML payload, which has the overall structure:

```yaml
file-defaults: ...       # defaults inherited by file sinks
fluent-defaults: ...     # defaults inherited by Fluentd sinks
http-defaults: ...       # defaults inherited by HTTP sinks
otlp-defaults: ...       # defaults inherited by OTLP sinks
sinks:
   file-groups: ...      # file sink definitions
   fluent-servers: ...   # Fluentd sink definitions
   http-servers: ...     # HTTP sink definitions
   otlp-servers: ...     # OTLP sink definitions
   stderr: ...           # stderr sink definitions
capture-stray-errors: ... # parameters for the stray error capture system
```

Providing a logging configuration is optional. Any fields included in the YAML payload will override the same fields in the [default logging configuration](#default-logging-configuration).

<Warning>
When you provide a minimal logging configuration for `file-groups`, CockroachDB replaces the entire default `file-groups` structure instead of merging only the specified fields. As a result, all logging channels flow into the `default` file sink, which can produce noisy logs and rapid log rotation. Partial YAML overrides that merge with the default logging configuration are not supported. To avoid misconfiguration, validate your logging settings using the [`cockroach debug check-log-config`](#cockroach-debug-check-log-config) command.
</Warning>

To demonstrate this warning scenario, consider the following excerpt from the [default logging configuration](#default-logging-configuration) which has several file sinks followed by `stderr`. Note that each file sink has a `max-group-size: 100MiB`.

```yaml
...
sinks:
  file-groups:
    changefeed:
      channels: {INFO: [CHANGEFEED]}
      max-group-size: 100MiB
...
    default:
      channels: {INFO: [DEV, OPS], WARNING: [HEALTH, STORAGE, SESSIONS, SQL_SCHEMA, USER_ADMIN, PRIVILEGES, SENSITIVE_ACCESS, SQL_EXEC, SQL_PERF, SQL_INTERNAL_PERF, TELEMETRY, KV_DISTRIBUTION, CHANGEFEED, KV_EXEC]}
      max-group-size: 100MiB
...
    health:
      channels: {INFO: [HEALTH]}
      max-group-size: 100MiB
...
    kv-distribution:
      channels: {INFO: [KV_DISTRIBUTION]}    
      max-group-size: 100MiB
...
    kv-exec:
      channels: {INFO: [KV_EXEC]}     
      max-group-size: 100MiB
...
    pebble:
      channels: {INFO: [STORAGE]}
      max-group-size: 100MiB 
...
  stderr:
...
```

Next, consider the following minimal logging configuration. It moves the `DEV` and `OPS` channels from the `default` file sink to a new file sink called `debug` and increases the `max-group-size` for the `default` file sink to `1000MiB`:

```yaml
sinks:
  file-groups:
    debug:
      channels: {INFO: [DEV, OPS]}
      max-group-size: 100MiB
    default:
      channels: {WARNING: [HEALTH, STORAGE, SESSIONS, SQL_SCHEMA, USER_ADMIN, PRIVILEGES, SENSITIVE_ACCESS, SQL_EXEC, SQL_PERF, SQL_INTERNAL_PERF, TELEMETRY, KV_DISTRIBUTION, CHANGEFEED, KV_EXEC]}
      max-group-size: 1000MiB
```

When the minimal configuration is applied, the effective configuration updates the `max-group-size` for the `default` file sink and adds a new `debug` file sink with the `DEV` and `OPS` channels. However, it also removes all other file sinks, such as `changefeed`, `health`, and `kv-distribution`. The entire `file-groups` structure is replaced rather than merging only the specified fields.

```yaml
...
sinks:
  file-groups:
    debug:
      channels: {INFO: [DEV, OPS]}
      max-group-size: 100MiB
...      
    default:
      channels: {WARNING: [HEALTH, STORAGE, SESSIONS, SQL_SCHEMA, USER_ADMIN, PRIVILEGES, SENSITIVE_ACCESS, SQL_EXEC, SQL_PERF, SQL_INTERNAL_PERF, TELEMETRY, KV_DISTRIBUTION, CHANGEFEED, KV_EXEC]}
      max-group-size: 1000MiB
...
  stderr:
...
```

<Note>
Log channels cannot be completely disabled. You can configure [how log messages are routed to different sinks](/docs/v25.4/configure-logs#configure-log-sinks) and [adjust verbosity levels](/docs/v25.4/configure-logs#set-logging-levels), but you cannot turn off a log channel entirely. For example, a channel that **is not explicitly configured** for a [file group](/docs/v25.4/configure-logs#output-to-files) **is enabled** in the `default` file group.
</Note>

### `cockroach debug check-log-config`

The `cockroach debug check-log-config` command helps you validate logging settings before starting or restarting nodes. It returns the YAML definitions and a URL to a visualization of the default logging configuration.

When you run it without logging flags, it prints the [default log configuration](#default-logging-configuration). If you pass a logging flag (for example, [`--log=...` or `--log-config-file=...`](/docs/v25.4/cockroach-start#logging)), the output shows the configuration after your YAML payload is applied, so you can confirm the final sink, channel, and formatting behaviors.

## Configure log sinks

Log *sinks* route events from specified [logging channels](/docs/v25.4/logging-overview#logging-channels) to destinations outside CockroachDB. These destinations include:

- [Log files](#output-to-files)
- [Fluentd](https://www.fluentd.org/) -compatible [servers](#output-to-fluentd-compatible-network-collectors)
- [HTTP servers](#output-to-http-network-collectors)
- [OTLP](https://opentelemetry.io/) -compatible [servers](#output-to-otlp-compatible-network-collectors)
- The [standard error stream (`stderr`)](#output-to-stderr)

All supported output destinations are configured under `sinks`:

```yaml
file-defaults: ...
fluent-defaults: ...
http-defaults: ...
otlp-defaults: ...
sinks:
  file-groups:
    {file group name}:
      channels: {channels}
      ...
  fluent-servers:
    {server name}:
      channels: {channels}
      ...
  http-servers:
    {server name}:
      channels: {channels}
      ...
  otlp-servers:
    {server name}:
      channels: {channels}
      ...
  stderr:
      channels: {channels}
      ...
```

All supported sink types use the following common sink parameters:

<table><thead><tr><th>Parameter</th><th>Description</th></tr></thead><tbody><tr><td><code>filter</code></td><td>Minimum severity level at which logs enter the channels selected for the sink. Accepts one of the valid <a href="/docs/v25.4/logging#logging-levels-severities">severity levels</a> or <code>NONE</code>, which excludes all messages from the sink output. For details, see <a href="#set-logging-levels">Set logging levels</a>.</td></tr><tr><td><code>format</code></td><td>Log message format to use for file or network sinks. Accepts one of the valid <a href="/docs/v25.4/log-formats">log formats</a>. For details, see <a href="#file-logging-format">file logging format</a>, <a href="#fluentd-logging-format">Fluentd logging format</a>, <a href="#http-logging-format">HTTP logging format</a>, and <a href="#otlp-logging-format">OTLP logging format</a>.</td></tr><tr><td><code>format-options</code></td><td>Customization options for specified <code>format</code>. For available options for each format, see <a href="/docs/v25.4/log-formats">Log formats</a>. For an example use case, see <a href="#set-timezone">Set timezone</a>.</td></tr><tr><td><code>redact</code></td><td>When <code>true</code>, enables automatic redaction of personally identifiable information (PII) from log messages. This ensures that sensitive data is not transmitted when collecting logs centrally or over a network. For details, see <a href="#redact-logs">Redact logs</a>.</td></tr><tr><td><code>redactable</code></td><td>When <code>true</code>, preserves redaction markers around fields that are considered sensitive in the log messages. The markers are recognized by <a href="/docs/v25.4/cockroach-debug-zip"><code>cockroach debug zip</code></a> and <a href="/docs/v25.4/cockroach-debug-merge-logs"><code>cockroach debug merge-logs</code></a> but may not be compatible with external log collectors. For details on how the markers appear in each format, see <a href="/docs/v25.4/log-formats">Log formats</a>.</td></tr><tr><td><code>exit-on-error</code></td><td>When <code>true</code>, stops the Cockroach node if an error is encountered while writing to the sink. We recommend enabling this option on file sinks in order to avoid losing any log entries. When set to <code>false</code>, this can be used to mark certain sinks (such as <code>stderr</code>) as non-critical.</td></tr><tr><td><a></a><code>auditable</code></td><td>If <code>true</code>, enables <code>exit-on-error</code> on the sink. Also disables <code>buffered-writes</code> if the sink is under <code>file-groups</code>. This guarantees <a href="https://wikipedia.org/wiki/Non-repudiation">non-repudiability</a> for any logs in the sink, but can incur a performance overhead and higher disk IOPS consumption. This setting is typically enabled for <a href="/docs/v25.4/logging-use-cases#security-and-audit-monitoring">security-related logs</a>.<br/><br/>File-based audit logging cannot coexist with the buffering configuration, so disable either <a href="#file-buffering"><code>buffering</code></a> or <code>auditable</code>.</td></tr></tbody></table>

If not specified for a given sink, these parameter values are inherited from [`file-defaults`](#set-file-defaults) (for file sinks), [`fluent-defaults`](#set-fluentd-defaults) (for Fluentd sinks), [`http-defaults`](#set-http-defaults) (for HTTP sinks), and [`otlp-defaults`](#set-otlp-defaults) (for OTLP sinks).

### Output to files

CockroachDB can write messages to one or more log files.

`file-groups` specifies the channels that output to each log file, along with its output directory and other configuration details. For example:

```yaml
file-defaults: ...
fluent-defaults: ...
http-defaults: ...
otlp-defaults: ...
sinks:
  file-groups:
    default:
      channels: [DEV]
    health:
      channels: [HEALTH]
      dir: health-logs
    ...
```

<Tip>
A file group name is arbitrary and is used to name the log files. The `default` file group is an exception. For details, see [Log file naming](#log-file-naming).
</Tip>

Along with the [common sink parameters](#common-sink-parameters), each file group accepts the following additional parameters:

<table><thead><tr><th>Parameter</th><th>Description</th></tr></thead><tbody><tr><td><code>channels</code></td><td>List of channels that output to this sink. Use a YAML array or string of <a href="/docs/v25.4/logging-overview#logging-channels">channel names</a>, <code>ALL</code> to include all channels, or <code>ALL EXCEPT &#123;channels&#125;</code> to include all channels except the specified channel names.<br/><br/>For more details on acceptable syntax, see <a href="#logging-channel-selection">Logging channel selection</a>.</td></tr><tr><td><code>dir</code></td><td>Output directory for log files generated by this sink.</td></tr><tr><td><code>max-file-size</code></td><td>Approximate maximum size of individual files generated by this sink. Used to specify the maximum size that a log file can grow before a new log file is created. Accepts a valid file size, such as <code>2MiB</code>.<br/><br/><strong>Default:</strong><code>10MiB</code></td></tr><tr><td><code>max-group-size</code></td><td>Approximate maximum combined size of all files to be preserved for this sink. Configures the maximum size for a logging group (for example, <code>cockroach</code>, <code>cockroach-sql-audit</code>, <code>cockroach-auth</code>, <code>cockroach-sql-exec</code>, <code>cockroach-pebble</code>), after which the oldest log file is deleted. An asynchronous garbage collection removes files that cause the file set to grow beyond this specified size. Accepts a valid file size, such as <code>1GiB</code>.<br/><br/>For high-traffic deployments, or to ensure log retention over longer periods of time, consider raising this value to <code>500MiB</code> or <code>1GiB</code>.<br/><br/><strong>Default:</strong><code>100MiB</code></td></tr><tr><td><code>file-permissions</code></td><td>The <code>chmod</code>-style permissions on generated log files, formatted as a 3-digit octal number. The executable bit must not be set.<br/><br/><strong>Default:</strong><code>640</code> (readable by the owner or members of the group, writable by the owner).</td></tr><tr><td><code>buffered-writes</code></td><td>When <code>true</code>, enables buffering of writes. Set to <code>false</code> to flush every log entry (i.e., propagate data from the <code>cockroach</code> process to the OS) and synchronize writes (i.e., ask the OS to confirm the log data was written to disk). Disabling this setting provides <a href="https://wikipedia.org/wiki/Non-repudiation">non-repudiation</a> guarantees, but can incur a performance overhead and higher disk IOPS consumption. This setting is typically disabled for <a href="/docs/v25.4/logging-use-cases#security-and-audit-monitoring">security-related logs</a>.</td></tr><tr><td><a></a><code>buffering</code></td><td><code>buffering</code> is disabled by default for file log sinks. <strong>Default:</strong><code>buffering: NONE</code>. Note that enabling asynchronous buffering of file log sinks is in <a href="/docs/v25.4/cockroachdb-feature-availability#features-in-preview">preview</a>.<br/><br/>To configure buffering of log messages for the sink, use the following sub-parameters:<br/><br/>- <code>max-staleness</code>: The maximum time a log message will wait in the buffer before a flush is triggered. Set to <code>0</code> to disable flushing based on elapsed time.<br/><br/>- <code>flush-trigger-size</code>: The number of bytes that will trigger the buffer to flush. Set to <code>0</code> to disable flushing based on accumulated size.<br/><br/>- <code>max-buffer-size</code>: The maximum size of the buffer: new log messages received when the buffer is full cause older messages to be dropped.<br/><br/>When <code>max-staleness</code> and <code>flush-trigger-size</code> are used together, whichever is reached first will trigger the flush. This setting is typically disabled for <a href="/docs/v25.4/logging-use-cases#security-and-audit-monitoring">security-related logs</a>. For a usage example, refer to <a href="/docs/v25.4/cockroach-start#enable-wal-failover">Enable WAL failover</a>.<br/><br/>File-based audit logging cannot coexist with this buffering configuration, so disable either <code>buffering</code> or <a href="#auditable"><code>auditable</code></a>.</td></tr></tbody></table>

If not specified for a given file group, the parameter values are inherited from [`file-defaults`](#configure-logging-defaults) (except `channels`, which uses the [default configuration](#default-logging-configuration)).

#### Log file naming

Log files are named in the following format:

```text
{process}-{file group}.{host}.{user}.{start timestamp in UTC}.{process ID}.log
```

For example, a file group `health` will generate a log file that looks like this:

```text
cockroach-health.work-laptop.worker.2021-03-15T15_24_10Z.024338.log
```

For each file group, a symlink points to the latest generated log file. It's easiest to refer to the symlink. For example:

```text
cockroach-health.log
```

<Note>
The files generated for a group named `default` are named after the pattern `cockroach.{metadata}.log`.
</Note>

#### Access in DB Console

<Tip>
Log files can be accessed using the DB Console, which displays them in JSON format.

1. [Access the DB Console](/docs/v25.4/ui-overview#db-console-access) and then click [**Advanced Debug**](/docs/v25.4/ui-debug-pages) in the left-hand navigation.
2. Under **Raw Status Endpoints (JSON)**, click **Log Files** to view the JSON of all collected logs.
3. Copy one of the log filenames. Then click **Specific Log File** and replace the `cockroach.log` placeholder in the URL with the filename.
</Tip>

#### Known limitations

Log files can only be accessed in the DB Console if they are stored in the same directory as the file sink for the `DEV` channel.

### Output to Fluentd-compatible network collectors

CockroachDB can send logs over the network to a [Fluentd](https://www.fluentd.org/)-compatible log collector (e.g., [Elasticsearch](https://www.elastic.co/elastic-stack), [Splunk](https://www.splunk.com/)). `fluent-servers` specifies the channels that output to a server, along with the server configuration details. For example:

```yaml
file-defaults: ...
fluent-defaults: ...
http-defaults: ...
otlp-defaults: ...
sinks:
  fluent-servers:
    health:
      channels: [HEALTH]
      address: 127.0.0.1:5170
    ...
```

<Note>
A Fluentd sink can be listed more than once with different `address` values. This routes the same logs to different Fluentd servers.
</Note>

Along with the [common sink parameters](#common-sink-parameters), each Fluentd server accepts the following additional parameters:

<table><thead><tr><th>Parameter</th><th>Description</th></tr></thead><tbody><tr><td><code>channels</code></td><td>List of channels that output to this sink. Use a YAML array or string of <a href="/docs/v25.4/logging-overview#logging-channels">channel names</a>, <code>ALL</code> to include all channels, or <code>ALL EXCEPT &#123;channels&#125;</code> to include all channels except the specified channel names.<br/><br/>For more details on acceptable syntax, see <a href="#logging-channel-selection">Logging channel selection</a>.</td></tr><tr><td><code>address</code></td><td>Network address and port of the log collector.</td></tr><tr><td><code>net</code></td><td>Network protocol to use. Options are <code>tcp</code>, <code>tcp4</code>, <code>tcp6</code>, <code>udp</code>, <code>udp4</code>, <code>udp6</code>, or <code>unix</code>.<br/><br/><strong>Default:</strong><code>tcp</code><br/><br/><strong>Note:</strong> In most cases, use the default of <code>tcp</code> rather than <code>udp</code>. The UDP/IP protocol has a &#126;65 KB (65,507 bytes) limit per datagram. This limit is enforced by the operating system. Log lines that exceed this limit return a <code>message too long</code> error.</td></tr><tr><td><code>buffering</code></td><td>Configures buffering of log messages for the sink, with the following sub-parameters:<br/><br/>- <code>max-staleness</code>: The maximum time a log message will wait in the buffer before a flush is triggered. Set to <code>0</code> to disable flushing based on elapsed time. <strong>Default:</strong><code>5s</code><br/><br/>- <code>flush-trigger-size</code>: The number of bytes that will trigger the buffer to flush. Set to <code>0</code> to disable flushing based on accumulated size. <strong>Default:</strong><code>1MiB</code><br/><br/>- <code>max-buffer-size</code>: The maximum size of the buffer: new log messages received when the buffer is full cause older messages to be dropped. <strong>Default:</strong><code>50MiB</code><br/><br/>When <code>max-staleness</code> and <code>flush-trigger-size</code> are used together, whichever is reached first will trigger the flush. <code>buffering</code> is enabled by default for <a href="#output-to-fluentd-compatible-network-collectors">Fluentd-compatible</a> log sinks. To explicitly disable log buffering, specify <code>buffering: NONE</code> instead. This setting is typically disabled for <a href="/docs/v25.4/logging-use-cases#security-and-audit-monitoring">security-related logs</a>. See <a href="#log-buffering-for-network-sinks">Log buffering</a> for more details and usage.</td></tr></tbody></table>

For an example network logging configuration, see [Logging use cases](/docs/v25.4/logging-use-cases#network-logging).

### Output to HTTP network collectors

CockroachDB can send logs over the network to an HTTP server. `http-servers` specifies the channels that output to a server, along with the server configuration details. For example:

```yaml
file-defaults: ...
fluent-defaults: ...
http-defaults: ...
otlp-defaults: ...
sinks:
  http-servers:
    health:
      channels: [HEALTH]
      address: 127.0.0.1:5170
      method: POST
      unsafe-tls: false
      timeout: 2s
      disable-keep-alives: false
      ...
```

<Note>
An HTTP sink can be listed more than once with different `address` values. This routes the same logs to different HTTP servers.
</Note>

Along with the [common sink parameters](#common-sink-parameters), each HTTP server accepts the following additional parameters:

<table><thead><tr><th>Parameter</th><th>Description</th></tr></thead><tbody><tr><td><code>channels</code></td><td>List of channels that output to this sink. Use a YAML array or string of <a href="/docs/v25.4/logging-overview#logging-channels">channel names</a>, <code>ALL</code> to include all channels, or <code>ALL EXCEPT &#123;channels&#125;</code> to include all channels except the specified channel names.<br/><br/>For more details on acceptable syntax, see <a href="#logging-channel-selection">Logging channel selection</a>.</td></tr><tr><td><code>address</code></td><td>Network address and port of the log collector.</td></tr><tr><td><code>method</code></td><td>HTTP method to use. Can be <code>GET</code> or <code>POST</code>.<br/><br/><strong>Default:</strong><code>POST</code></td></tr><tr><td><code>unsafe-tls</code></td><td>When <code>true</code>, bypasses TLS server validation.<br/><br/><strong>Default:</strong><code>false</code></td></tr><tr><td><code>timeout</code></td><td>Timeout before requests are abandoned.<br/><br/><strong>Default:</strong><code>0</code> (no timeout)</td></tr><tr><td><code>disable-keep-alives</code></td><td>When <code>true</code>, disallows reuse of the server connection across requests.<br/><br/><strong>Default:</strong><code>false</code> (reuses connections)</td></tr><tr><td><code>compression</code></td><td>Compression method for the HTTP request body. Valid values <code>gzip</code> or <code>none</code>.<br/><br/><strong>Default:</strong><code>gzip</code></td></tr><tr><td><code>headers</code></td><td>Map of key-value string pairs which will be appended to every request as custom HTTP headers.</td></tr><tr><td><a></a><code>file-based-headers</code></td><td>Map of key-filepath string pairs. The file specified by the filepath only contains a value that corresponds to the key. The key from the YAML configuration and the value contained in the file will be appended to every request as a custom HTTP header.<br/><br/>For example: <code>file-based-headers: &#123;X-CRDB-HEADER-KEY: /some/path/to/file&#95;with&#95;value, X-ANOTHER-HEADER-KEY: /other/path/to/file&#95;with&#95;another&#95;value&#125;</code><br/><br/>A value in a file can be updated without restarting the <code>cockroach</code> process. Instead, send SIGHUP to the <code>cockroach</code> process to notify it to refresh values.</td></tr><tr><td><code>buffering</code></td><td>Configures buffering of log messages for the sink, with the following sub-parameters:<br/><br/>- <code>max-staleness</code>: The maximum time a log message will wait in the buffer before a flush is triggered. Set to <code>0</code> to disable flushing based on elapsed time. <strong>Default:</strong><code>5s</code><br/><br/>- <code>flush-trigger-size</code>: The number of bytes that will trigger the buffer to flush. Set to <code>0</code> to disable flushing based on accumulated size. <strong>Default:</strong><code>1MiB</code><br/><br/>- <code>max-buffer-size</code>: The maximum size of the buffer: new log messages received when the buffer is full cause older messages to be dropped. <strong>Default:</strong><code>50MiB</code><br/><br/>When <code>max-staleness</code> and <code>flush-trigger-size</code> are used together, whichever is reached first will trigger the flush. <code>buffering</code> is enabled by default for <a href="#output-to-http-network-collectors">HTTP</a> log sinks. To explicitly disable log buffering, specify <code>buffering: NONE</code> instead. This setting is typically disabled for <a href="/docs/v25.4/logging-use-cases#security-and-audit-monitoring">security-related logs</a>. See <a href="#log-buffering-for-network-sinks">Log buffering</a> for more details and usage.</td></tr></tbody></table>

For an example network logging configuration, see [Logging use cases](/docs/v25.4/logging-use-cases#network-logging). For an example that uses `compression`, `headers`, `file-based-headers`, and `buffering` parameters, see [Configure an HTTP network collector for Datadog](/docs/v25.4/log-sql-activity-to-datadog#step-2-configure-an-http-network-collector-for-datadog).

### Output to OTLP-compatible network collectors

CockroachDB can send logs to an [OpenTelemetry](https://opentelemetry.io/)-compatible server using the OTLP protocol (e.g., [Datadog agent](https://docs.datadoghq.com/agent?tab=Host-based)). For a complete list of log servers that support the OTLP protocol, see the [OpenTelemetry registry](https://opentelemetry.io/ecosystem/vendors).

Define `otlp-servers` to select channels and configure connection and protocol details. For example:

```yaml
file-defaults: ...
fluent-defaults: ...
http-defaults: ...
otlp-defaults: ...
sinks:
  otlp-servers:
    health:
      channels: [HEALTH]
      address: 127.0.0.1:4317
      mode: grpc
      compression: gzip
      ...
```

Along with the [common sink parameters](#common-sink-parameters), each OTLP server accepts the following additional parameters:

<table><thead><tr><th>Parameter</th><th>Description</th></tr></thead><tbody><tr><td><code>channels</code></td><td>List of channels that output to this sink. Use a YAML array or string of <a href="/docs/v25.4/logging-overview#logging-channels">channel names</a>, <code>ALL</code>, or <code>ALL EXCEPT &#123;channels&#125;</code>. See <a href="#logging-channel-selection">Logging channel selection</a> for syntax.</td></tr><tr><td><code>address</code></td><td>Network address of the OTLP collector endpoint for log ingestion, formatted as <code>&#123;host&#125;:&#123;port&#125;</code>.</td></tr><tr><td><code>mode</code></td><td>Protocol used to export logs. Valid values <code>grpc</code> or <code>http</code>.<br/><br/><strong>Default:</strong><code>grpc</code></td></tr><tr><td><code>headers</code></td><td>Map of key-value string pairs which will be appended to every request as custom gRPC or HTTP headers depending on the <code>mode</code> selected. For example, <code>"x-api-key": "YOUR&#95;API&#95;KEY&#95;HERE"</code>.</td></tr><tr><td><code>compression</code></td><td>Compression for requests. Valid values <code>gzip</code> or <code>none</code>.<br/><br/><strong>Default:</strong><code>gzip</code></td></tr><tr><td><code>buffering</code></td><td>Configures buffering of log messages for the sink, with the following sub-parameters:<br/><br/>- <code>max-staleness</code>: The maximum time a log message will wait in the buffer before a flush is triggered. Set to <code>0</code> to disable flushing based on elapsed time. <strong>Default:</strong><code>5s</code><br/><br/>- <code>flush-trigger-size</code>: The number of bytes that will trigger the buffer to flush. Set to <code>0</code> to disable flushing based on accumulated size. <strong>Default:</strong><code>1MiB</code><br/><br/>- <code>max-buffer-size</code>: The maximum size of the buffer: new log messages received when the buffer is full cause older messages to be dropped. <strong>Default:</strong><code>50MiB</code><br/><br/>When <code>max-staleness</code> and <code>flush-trigger-size</code> are used together, whichever is reached first will trigger the flush. <code>buffering</code> is enabled by default for OTLP log sinks. To explicitly disable log buffering, specify <code>buffering: NONE</code> instead. This setting is typically disabled for <a href="/docs/v25.4/logging-use-cases#security-and-audit-monitoring">security-related logs</a>. See <a href="#log-buffering-for-network-sinks">Log buffering</a> for more details and usage.</td></tr></tbody></table>

For an example network logging configuration, see [Logging use cases](/docs/v25.4/logging-use-cases#network-logging).

### Output to `stderr`

CockroachDB can output messages to the [standard error stream (`stderr`)](https://wikipedia.org/wiki/Standard_streams#Standard_error_(stderr)), which prints them to the machine's terminal but does not store them. `stderr` specifies the channels that output to the stream. For example:

```yaml
file-defaults: ...
fluent-defaults: ...
http-defaults: ...
otlp-defaults: ...
sinks:
  stderr:
    channels: [DEV]
```

Along with the [common sink parameters](#common-sink-parameters), `stderr` accepts the following additional parameters:

<Note>
The `format` parameter for `stderr` can be set to any one of the valid [log formats](/docs/v25.4/log-formats). It is set to [`crdb-v2-tty`](/docs/v25.4/log-formats#format-crdb-v2-tty) by default.
</Note>

<table><thead><tr><th>Parameter</th><th>Description</th></tr></thead><tbody><tr><td><code>channels</code></td><td>List of channels that output to this sink. Use a YAML array or string of <a href="/docs/v25.4/logging-overview#logging-channels">channel names</a>, <code>ALL</code> to include all channels, or <code>ALL EXCEPT &#123;channels&#125;</code> to include all channels except the specified channel names.<br/><br/>For more details on acceptable syntax, see <a href="#logging-channel-selection">Logging channel selection</a>.</td></tr><tr><td><code>no-color</code></td><td>When <code>true</code>, removes terminal color <a href="https://wikipedia.org/wiki/ANSI_escape_code">escape codes</a> from the output.</td></tr></tbody></table>

Because server start-up messages are always emitted at the start of the standard error stream, it is generally difficult to automate integration of `stderr` with log analyzers. We recommend using [file logging](#output-to-files) or network logging via [Fluentd](#output-to-fluentd-compatible-network-collectors) or [HTTP](#output-to-http-network-collectors) instead of `stderr` when integrating with automated monitoring software.

<Note>
By default, `cockroach start` and `cockroach start-single-node` do not print any messages to `stderr`. However, if the `cockroach` process does not have access to on-disk storage, all messages are printed to `stderr`.
</Note>

### Logging channel selection

<Note>
Log channels cannot be completely disabled. You can configure [how log messages are routed to different sinks](/docs/v25.4/configure-logs#configure-log-sinks) and [adjust verbosity levels](/docs/v25.4/configure-logs#set-logging-levels), but you cannot turn off a log channel entirely. For example, a channel that **is not explicitly configured** for a [file group](/docs/v25.4/configure-logs#output-to-files) **is enabled** in the `default` file group.
</Note>

For each sink, multiple channels can be selected. Note that:

- Spacing between items will vary according to the syntax used.
- Channel selection is case-insensitive.

These selections are equivalent:

```yaml
# Select OPS and HEALTH.
channels: [OPS, HEALTH]
channels: 'OPS, HEALTH'
channels: OPS,HEALTH
channels:
- OPS
- HEALTH
```

By default, the severity level set by `filter` in the [sink configuration](#common-sink-parameters) is used. However, you can specify a different severity level for each channel. For more information on severity levels, see [Set logging levels](#set-logging-levels).

These selections are equivalent:

```yaml
# Select PERF at severity INFO, and HEALTH and OPS at severity WARNING.
channels: {INFO: [PERF], WARNING: [HEALTH, OPS]}
channels:
  INFO:
  - PERF
  WARNING:
  - OPS
  - HEALTH
```

Brackets are optional when selecting a single channel:

```yaml
channels: OPS
channels: {INFO: PERF}
```

To select all channels, using the `all` keyword:

```yaml
channels: all
channels: 'all'
channels: [all]
channels: ['all']
```

To select all channels except for a subset, using the `all except` keyword prefix:

```yaml
channels: all except ops,health
channels: all except [ops,health]
channels: 'all except ops, health'
channels: 'all except [ops, health]'
```

## Configure logging defaults

When setting up a logging configuration, it's simplest to define shared parameters in `file-defaults`, `fluent-defaults`, `http-defaults`, and `otlp-defaults` and override specific values as needed in [`file-groups`](#output-to-files), [`fluent-servers`](#output-to-fluentd-compatible-network-collectors), [`http-servers`](#output-to-http-network-collectors), [`otlp-servers`](#output-to-otlp-compatible-network-collectors) and [`stderr`](#output-to-stderr). For a complete example, see the [default configuration](#default-logging-configuration).

<Tip>
You can verify your current settings by running [`cockroach debug check-log-config`](#cockroach-debug-check-log-config) with the applicable logging flag. The command returns the YAML definitions and a URL to a visualization of the logging configuration.
</Tip>

This section describes some recommended defaults.

### Set file defaults

Defaults for log files are set in `file-defaults`, which accepts all [common sink parameters](#common-sink-parameters) and the [file group parameters](#output-to-files) `dir`, `max-file-size`, `max-group-size`, `file-permissions`, and `buffered-writes`.

#### Logging directory

By default, CockroachDB adds log files to a `logs` subdirectory in the first on-disk [`store` directory](/docs/v25.4/cockroach-start#store) (default: `cockroach-data`):

```text
cockroach-data/logs
```

<Tip>
Each Cockroach node generates log files in the directory specified by its logging configuration. These logs detail the internal activity of that node without visibility into the behavior of other nodes. When troubleshooting, it's best to refer to the output directory for the cluster log files, which collect the messages from all active nodes.
</Tip>

In cloud deployments, the [main data store](/docs/v25.4/cockroach-start#store) will be subject to an IOPS budget. Adding logs to the store directory will excessively consume IOPS. For this reason, cloud deployments should output log files to a separate directory with fewer IOPS restrictions.

You can override the default logging directory like this:

```yaml
file-defaults:
  dir: /custom/dir/path/
```

#### File logging format

The default message format for log files is [`crdb-v2`](/docs/v25.4/log-formats#format-crdb-v2). Each `crdb-v2` log message starts with a flat prefix that contains event metadata (e.g., severity, date, timestamp, channel), followed by the event payload. For details on the metadata, see [Log formats](/docs/v25.4/log-formats#format-crdb-v2).

If you plan to read logs programmatically, you can switch to a [JSON](/docs/v25.4/log-formats#format-json) or [compact JSON](/docs/v25.4/log-formats#format-json-compact) format:

```yaml
file-defaults:
  format: json
```

<Note>
`format` refers to the envelope of the log message, which contains the event metadata. This is separate from the event payload, which corresponds to its [event type](/docs/v25.4/eventlog).
</Note>

### Set Fluentd defaults

Defaults for Fluentd-compatible network sinks are set in `fluent-defaults`, which accepts all [common sink parameters](#common-sink-parameters).

Note that the [server parameters](#output-to-fluentd-compatible-network-collectors) `address` and `net` are *not* specified in `fluent-defaults`:

- `address` must be specified for each sink under `fluent-servers`.
- `net` is not required and defaults to `tcp`.

#### Fluentd logging format

The default message format for network output is [`json-fluent-compact`](/docs/v25.4/log-formats#format-json-fluent-compact). Each log message is structured as a JSON payload that can be read programmatically. The `json-fluent-compact` and [`json-fluent`](/docs/v25.4/log-formats#format-json-fluent) formats include a `tag` field that is required by the [Fluentd protocol](https://docs.fluentd.org/configuration/config-file). For details, see [Log formats](/docs/v25.4/log-formats#format-json-fluent-compact).

```yaml
fluent-defaults:
  format: json-fluent
```

<Note>
`format` refers to the envelope of the log message. This is separate from the event payload, which is structured according to [event type](/docs/v25.4/eventlog).
</Note>

### Set HTTP defaults

Defaults for HTTP sinks are set in `http-defaults`, which accepts all [common sink parameters](#common-sink-parameters).

Note that the [server parameters](#output-to-http-network-collectors) `address` and `method` are *not* specified in `http-defaults`:

- `address` must be specified for each sink under `http-servers`.
- `method` is not required and defaults to `POST`.

#### HTTP logging format

The default message format for HTTP output is [`json-compact`](/docs/v25.4/log-formats#format-json-compact). Each log message is structured as a JSON payload that can be read programmatically. For details, see [Log formats](/docs/v25.4/log-formats#format-json-compact).

```yaml
http-defaults:
  format: json
```

<Note>
`format` refers to the envelope of the log message. This is separate from the event payload, which is structured according to [event type](/docs/v25.4/eventlog).
</Note>

### Set OTLP defaults

Defaults for OTLP sinks are set in `otlp-defaults`, which accepts all [common sink parameters](#common-sink-parameters).

Note that the [server parameter](#output-to-otlp-compatible-network-collectors) `address`is *not* specified in `otlp-defaults`. The `address` must be specified for each sink under `otlp-servers`.

#### OTLP logging format

The default message format for OTLP output is [`json`](/docs/v25.4/log-formats#format-json). Each log message is structured as a JSON payload that can be read programmatically. For details, see [Log formats](/docs/v25.4/log-formats).

```yaml
otlp-defaults:
  format: json
```

<Note>
`format` refers to the envelope of the log message. This is separate from the event payload, which is structured according to [event type](/docs/v25.4/eventlog).
</Note>

### Set logging levels

Log messages are associated with a [severity level](/docs/v25.4/logging#logging-levels-severities) when they are generated.

Each logging sink accepts messages from each logging channel at a minimum severity level. This minimum severity level can be specified [per sink](#common-sink-parameters) or by default using the `filter` attribute.

Messages with severity levels below the configured threshold do not enter logging channels and are discarded.

The [default configuration](#default-logging-configuration) uses the following severity levels for [`cockroach start`](/docs/v25.4/cockroach-start) and [`cockroach start-single-node`](/docs/v25.4/cockroach-start-single-node):

- `file-defaults`, `fluent-defaults`, and `http-defaults` each use `filter: INFO`. Since `INFO` is the lowest severity level, file and network sinks will emit all log messages.
- `stderr` uses `filter: NONE` and does not emit log messages.
- The `default` file group uses `filter: INFO` for events from the `DEV` and `OPS` channels, and `filter: WARNING` for all others.

<Note>
All other `cockroach` commands use `filter: WARNING` and log to `stderr` by default, with these exceptions:

- [`cockroach workload`](/docs/v25.4/cockroach-sql#logging) uses `filter: INFO`.
- [`cockroach demo`](/docs/v25.4/cockroach-demo#logging) uses `filter: NONE` (discards all log messages).
</Note>

You can override the `file-defaults`, `fluent-defaults`, and `http-defaults` severity levels on a per-sink basis.

For example, this will include `DEV` events at severity `WARNING`:

```yaml
sinks:
  file-groups:
    dev:
      channels: DEV
      filter: WARNING
```

You can also override the `filter` attribute and set severity levels on a [per-channel](#logging-channel-selection) basis.

For example, this will include `DEV` events at severity `INFO`, and `OPS` events at severity `ERROR`:

```yaml
sinks:
  file-groups:
    dev:
      channels: {INFO: DEV, ERROR: OPS}
```

### Set timezone

Using the `format-options` sink parameter, you may set the timezone for a specified log format.

#### `timezone` for text formats

The log output formats [`crdb-v1`](/docs/v25.4/log-formats#format-crdb-v1) and [`crdb-v2`](/docs/v25.4/log-formats#format-crdb-v2) support the format option `timezone`. When specified, the corresponding timezone is used to produce the timestamp column. The value can be any [timezone name recognized by the Go standard library](https://github.com/arp242/tz/blob/bf333631bec4/list.go).

For example:

```yaml
file-defaults:
  format: crdb-v2
  format-options: {timezone: america/new_york}
```

The timezone offset is included with the timestamp to ensure that the times can be read back precisely.

Example logging output:

```text
I231030 14:17:23.674909-040000 1 1@cli/log_flags.go:200 ⋮ [n?] 1  using explicit logging configuration:
I231030 14:17:23.674909-040000 1 1@cli/log_flags.go:200 ⋮ [n?] 1 +‹file-defaults:›
I231030 14:17:23.674909-040000 1 1@cli/log_flags.go:200 ⋮ [n?] 1 +‹   format: crdb-v2›
I231030 14:17:23.674909-040000 1 1@cli/log_flags.go:200 ⋮ [n?] 1 +‹   format-options: {timezone: america/new_york}›
                       ^^^^^^^ indicates GMT-4 timezone offset was used.
```

#### `datetime` field for JSON format

The log output format [`json`](/docs/v25.4/log-formats#format-json) supports the format options `datetime-format` and `datetime-timezone`.

`datetime-format` controls whether a `datetime` field with human-readable timestamp values is included in the logs. Valid values for this option are:

- `none`: Disable the creation of the `datetime` field. This is the default value.
- `iso8601` or `rfc3339`: Format the timestamp like "2006-01-02T15:04:05.999999999Z".
- `rfc1123`: Format the timestamp like "Mon, 02 Jan 2006 15:04:05 +0000".

The existing `timestamp` field with epoch values remains unchanged for backward-compatibility.

`datetime-timezone` selects which timezone to use when formatting the `datetime` field. The value can be any [timezone name recognized by the Go standard library](https://github.com/arp242/tz/blob/bf333631bec4/list.go). The default value is `UTC`. `datetime-timezone` must be combined with `datetime-format` set to a valid format since the default value for the `datetime-format` option is `none` and therefore the `datetime` field is not included by default.

For example:

```yaml
file-defaults:
  format: json
  format-options: { datetime-format: rfc3339, datetime-timezone: America/New_York }
```

Example logging output:

```text
{"channel_numeric":1,"channel":"OPS","timestamp":"1699305954.983614000","datetime":"2023-11-06T16:25:54.983614-05:00","version":"v23.2.0","severity_numeric":1,"severity":"INFO","goroutine":1,"file":"cli/log_flags.go","line":200,"entry_counter":1,"redactable":1,"tags":{"n":"?"},"message":"using explicit logging configuration:\n‹file-defaults:›\n‹  format: json›\n‹  format-options: { datetime-format: rfc3339, datetime-timezone: America/New_York }›"}
```

<Note>
Enabling the `datetime` field introduces CPU overhead and is nearly always unnecessary.

When sending output to a log collector (for example, via [Fluent](#output-to-fluentd-compatible-network-collectors) or [Datadog](#output-to-http-network-collectors)), the log collector can be configured to transform the epoch values in the `timestamp` field into a human-readable format.

When inspecting a [`json`](/docs/v25.4/log-formats#format-json) formatted log file produced by CockroachDB, you can use the command [`cockroach debug merge-logs`](/docs/v25.4/cockroach-debug-merge-logs) to convert the log into [`crdb-v1`](/docs/v25.4/log-formats#format-crdb-v1) format which includes timestamps in the `rfc3339` format.
</Note>

### Redact logs

CockroachDB can redact personally identifiable information (PII) from log messages. The logging system includes two parameters that handle this differently:

- `redact` is disabled by default. When enabled, `redact` automatically redacts sensitive data from logging output. We do *not* recommend enabling this on the `DEV` channel because it impairs our ability to troubleshoot problems.
- `redactable` is enabled by default. This places redaction markers around sensitive fields in log messages. These markers are recognized by [`cockroach debug zip`](/docs/v25.4/cockroach-debug-zip) and [`cockroach debug merge-logs`](/docs/v25.4/cockroach-debug-merge-logs), which aggregate CockroachDB log files and can be instructed to redact sensitive data from their output.

When collecting logs centrally (e.g., in data mining scenarios where non-privileged users have access to logs) or over a network (e.g., to an external log collector), it's safest to enable `redact`:

```yaml
file-defaults:
  redact: true
fluent-defaults:
  redact: true
http-defaults:
  redact: true
```

<Tip>
In addition, the `DEV` channel should be output to a separate logging directory, since it is likely to contain sensitive data. See [`DEV` channel](#dev-channel).
</Tip>

External log collectors can misinterpret the `cockroach debug` redaction markers (`< >`), since they are specific to CockroachDB. To prevent this issue when using network sinks, disable `redactable`:

```yaml
fluent-defaults:
  redactable: false
```

If the default redaction behavior and policies do not meet redaction requirements, we recommend using the external log collectors with the redaction markers (`< >`) to redact. In this case, enable `redactable`.

### DEV channel

The `DEV` channel is used for debug and uncategorized messages. It can therefore be noisy and contain sensitive (PII) information.

We recommend configuring `DEV` separately from the other logging channels. When sending logs to a [Fluentd-compatible](#output-to-fluentd-compatible-network-collectors) or [HTTP](#output-to-http-network-collectors) network collector, `DEV` logs should also be excluded from network collection.

In this example, the `dev` file group is reserved for `DEV` logs. These are output to a `cockroach-dev.log` file in a custom disk `dir`:

```yaml
file-defaults: ...
fluent-defaults: ...
sinks:
  file-groups:
    dev:
      channels: [DEV]
      dir: /custom/dir/path/
    ...
```

<Tip>
To ensure that you are protecting sensitive information, also [redact your logs](#redact-logs).
</Tip>

## Log buffering for network sinks

The network ([Fluentd-compatible](#output-to-fluentd-compatible-network-collectors), [HTTP](#output-to-http-network-collectors), and [OTLP-compatible](#output-to-otlp-compatible-network-collectors)) log sinks support the buffering of log messages by default.

With log buffering configured, log messages are held in a buffer for a configurable time period or accumulated message size threshold before being written to the target log sink together as a batch. Log buffering helps to ensure consistent low-latency log message writes over the network even in high-traffic, high-contention scenarios.

The following shows a basic log configuration with buffering configured for a [Fluentd-compatible](#output-to-fluentd-compatible-network-collectors) log sink:

```yaml
fluent-defaults:
  buffering:
    max-staleness: 20s
    flush-trigger-size: 2MiB
    max-buffer-size: 100MiB
sinks:
  fluent-servers:
    health:
      channels: HEALTH
      buffering:
        max-staleness: 2s  # Override max-staleness for HEALTH channel only
```

With this logging configuration:

- CockroachDB will hold log messages in a buffer for up to `20s` (the `max-staleness` setting), or up to a collected size of `2MiB` (the `flush-trigger-size` setting), before writing ("flushing") the buffer to the log file. When both settings are used, whichever case is met first triggers the buffer flush.
- If at any point the accumulated message size of buffer flushes (as triggered by reaching either the configured `max-staleness` or `flush-trigger-size` value) exceeds `100MiB` (the `max-buffer-size` setting), all new incoming log messages received are dropped until the accumulated message size in the buffer once more falls below this value.
- For the `HEALTH` [log channel](/docs/v25.4/logging-overview#logging-channels) only, override the `file-defaults` value of `20s` for `max-staleness`, instead flushing messages to the log file within up to `2s`.

Logs are flushed automatically upon CockroachDB startup only if CockroachDB is managed using `systemd`.

Alternatively, you may explicitly disable log buffering by setting `buffering` to `NONE`. The following log configuration explicitly disables log buffering for just the `OPS` channel on a [Fluentd-compatible](#output-to-fluentd-compatible-network-collectors) log sink:

```yaml
file-defaults: ...
fluent-defaults: ...
sinks:
  fluent-servers:
    ops:
      channels: OPS
      buffering: NONE
```

The following disables log buffering completely for the [Fluentd-compatible](#output-to-fluentd-compatible-network-collectors) sink:

```yaml
fluent-defaults:
  buffering: NONE
```

## Stray error capture

Certain events, such as uncaught software exceptions (panics), bypass the CockroachDB logging system. However, they can be useful in troubleshooting. For example, if CockroachDB crashes, it normally logs a stack trace to what caused the problem.

To ensure that these stray errors can be tracked, CockroachDB does not send them to `stderr` by default. Instead, stray errors are output to a `cockroach-stderr.log` file in the default [logging directory](#logging-directory).

You can change these settings in `capture-stray-errors`:

```yaml
file-defaults: ...
fluent-defaults: ...
sinks: ...
capture-stray-errors:
  enable: true
  dir: /custom/dir/path/
```

<Note>
When `capture-stray-errors` is disabled, [`redactable`](#redact-logs) cannot be enabled on the `stderr` sink. This is because `stderr` will contain both stray errors and logged events and cannot apply redaction markers in a reliable way. Note that [`redact`](#redact-logs) can still be enabled on `stderr` in this case.
</Note>

## Default logging configuration

The YAML payload below represents the default logging behavior of [`cockroach start`](/docs/v25.4/cockroach-start) and [`cockroach start-single-node`](/docs/v25.4/cockroach-start-single-node).

```yaml
file-defaults:
  dir: /cockroach-data/logs
  max-file-size: 10MiB
  max-group-size: 100MiB
  file-permissions: "0640"
  buffered-writes: true
  filter: INFO
  format: crdb-v2
  redact: false
  redactable: true
  exit-on-error: true
  auditable: false
  buffering: NONE
fluent-defaults:
  filter: INFO
  format: json-fluent-compact
  redact: false
  redactable: true
  exit-on-error: false
  auditable: false
  buffering:
    max-staleness: 5s
    flush-trigger-size: 1.0MiB
    max-buffer-size: 50MiB
    format: newline
http-defaults:
  method: POST
  unsafe-tls: false
  timeout: 2s
  disable-keep-alives: false
  compression: gzip
  filter: INFO
  format: json-compact
  redact: false
  redactable: true
  exit-on-error: false
  auditable: false
  buffering:
    max-staleness: 5s
    flush-trigger-size: 1.0MiB
    max-buffer-size: 50MiB
    format: newline
otlp-defaults:
  mode: grpc
  compression: gzip
  filter: INFO
  format: json
  redact: false
  redactable: true
  exit-on-error: false
  auditable: false
  buffering:
    max-staleness: 5s
    flush-trigger-size: 1.0MiB
    max-buffer-size: 50MiB
    format: newline
sinks:
  file-groups:
    changefeed:
      channels: {INFO: [CHANGEFEED]}
      dir: /cockroach-data/logs
      max-file-size: 10MiB
      max-group-size: 100MiB
      file-permissions: "0640"
      buffered-writes: true
      filter: INFO
      format: crdb-v2
      redact: false
      redactable: true
      exit-on-error: true
      buffering: NONE
    default:
      channels: {INFO: [DEV, OPS], WARNING: [HEALTH, STORAGE, SESSIONS, SQL_SCHEMA, USER_ADMIN, PRIVILEGES, SENSITIVE_ACCESS, SQL_EXEC, SQL_PERF, SQL_INTERNAL_PERF, TELEMETRY, KV_DISTRIBUTION, CHANGEFEED, KV_EXEC]}
      dir: /cockroach-data/logs
      max-file-size: 10MiB
      max-group-size: 100MiB
      file-permissions: "0640"
      buffered-writes: true
      filter: INFO
      format: crdb-v2
      redact: false
      redactable: true
      exit-on-error: true
      buffering: NONE
    health:
      channels: {INFO: [HEALTH]}
      dir: /cockroach-data/logs
      max-file-size: 10MiB
      max-group-size: 100MiB
      file-permissions: "0640"
      buffered-writes: true
      filter: INFO
      format: crdb-v2
      redact: false
      redactable: true
      exit-on-error: true
      buffering: NONE
    kv-distribution:
      channels: {INFO: [KV_DISTRIBUTION]}
      dir: /cockroach-data/logs
      max-file-size: 10MiB
      max-group-size: 100MiB
      file-permissions: "0640"
      buffered-writes: true
      filter: INFO
      format: crdb-v2
      redact: false
      redactable: true
      exit-on-error: true
      buffering: NONE
    kv-exec:
      channels: {INFO: [KV_EXEC]}
      dir: /cockroach-data/logs
      max-file-size: 10MiB
      max-group-size: 100MiB
      file-permissions: "0640"
      buffered-writes: true
      filter: INFO
      format: crdb-v2
      redact: false
      redactable: true
      exit-on-error: true
      buffering: NONE
    pebble:
      channels: {INFO: [STORAGE]}
      dir: /cockroach-data/logs
      max-file-size: 10MiB
      max-group-size: 100MiB
      file-permissions: "0640"
      buffered-writes: true
      filter: INFO
      format: crdb-v2
      redact: false
      redactable: true
      exit-on-error: true
      buffering: NONE
    security:
      channels: {INFO: [USER_ADMIN, PRIVILEGES]}
      dir: /cockroach-data/logs
      max-file-size: 10MiB
      max-group-size: 100MiB
      file-permissions: "0640"
      buffered-writes: false
      filter: INFO
      format: crdb-v2
      redact: false
      redactable: true
      exit-on-error: true
      buffering: NONE
    sql-audit:
      channels: {INFO: [SENSITIVE_ACCESS]}
      dir: /cockroach-data/logs
      max-file-size: 10MiB
      max-group-size: 100MiB
      file-permissions: "0640"
      buffered-writes: false
      filter: INFO
      format: crdb-v2
      redact: false
      redactable: true
      exit-on-error: true
      buffering: NONE
    sql-auth:
      channels: {INFO: [SESSIONS]}
      dir: /cockroach-data/logs
      max-file-size: 10MiB
      max-group-size: 100MiB
      file-permissions: "0640"
      buffered-writes: false
      filter: INFO
      format: crdb-v2
      redact: false
      redactable: true
      exit-on-error: true
      buffering: NONE
    sql-exec:
      channels: {INFO: [SQL_EXEC]}
      dir: /cockroach-data/logs
      max-file-size: 10MiB
      max-group-size: 100MiB
      file-permissions: "0640"
      buffered-writes: true
      filter: INFO
      format: crdb-v2
      redact: false
      redactable: true
      exit-on-error: true
      buffering: NONE
    sql-schema:
      channels: {INFO: [SQL_SCHEMA]}
      dir: /cockroach-data/logs
      max-file-size: 10MiB
      max-group-size: 100MiB
      file-permissions: "0640"
      buffered-writes: true
      filter: INFO
      format: crdb-v2
      redact: false
      redactable: true
      exit-on-error: true
      buffering: NONE
    sql-slow:
      channels: {INFO: [SQL_PERF]}
      dir: /cockroach-data/logs
      max-file-size: 10MiB
      max-group-size: 100MiB
      file-permissions: "0640"
      buffered-writes: true
      filter: INFO
      format: crdb-v2
      redact: false
      redactable: true
      exit-on-error: true
      buffering: NONE
    sql-slow-internal-only:
      channels: {INFO: [SQL_INTERNAL_PERF]}
      dir: /cockroach-data/logs
      max-file-size: 10MiB
      max-group-size: 100MiB
      file-permissions: "0640"
      buffered-writes: true
      filter: INFO
      format: crdb-v2
      redact: false
      redactable: true
      exit-on-error: true
      buffering: NONE
    telemetry:
      channels: {INFO: [TELEMETRY]}
      dir: /cockroach-data/logs
      max-file-size: 100KiB
      max-group-size: 1.0MiB
      file-permissions: "0640"
      buffered-writes: true
      filter: INFO
      format: crdb-v2
      redact: false
      redactable: true
      exit-on-error: true
      buffering: NONE
  stderr:
    filter: NONE
    format: crdb-v2-tty
    redact: false
    redactable: true
    exit-on-error: true
    buffering: NONE
capture-stray-errors:
  enable: true
  dir: /cockroach-data/logs
  max-group-size: 100MiB
```

<Note>
For high-traffic deployments that [output log messages to files](#output-to-files), consider raising `file-defaults: {max-group-size}` to `500MiB` or `1GiB` to extend log retention.
</Note>

Note that a default `dir` is not specified for `file-defaults` and `capture-stray-errors`:

- The default `dir` for `file-defaults` is inferred from the first on-disk [`store` directory](/docs/v25.4/cockroach-start#store). See [Logging directory](#logging-directory).
- The default `dir` for `capture-stray-errors` is inherited form `file-defaults`.

## See also

- [Logging Use Cases](/docs/v25.4/logging-use-cases)
- [Log Formats](/docs/v25.4/log-formats)
